<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- The name of the application. -->
    <string name="app_name">Arboretum</string>

    <!-- The hint text that appears in the search box. -->
    <string name="search_hint">Search</string>

    <!-- The menu entry that invokes search. -->
    <string name="menu_search">Search by name</string>
    <string name="menu_search_multi">Multi-criteria search</string>
    <string name="menu_about">About</string>
    <string name="home">Home</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="warning">Warning</string>

    <!-- activity titles -->
    <string name="preferences">Preferences</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="subject_info">Flower info</string>
    <string name="subject_image">Pictures</string>
    <string name="subject_image_big">Zoomed picture</string>
    <string name="add_custom_media_title">Add custom files</string>

    <!-- labels used in preferences -->
    <string name="preferences_lang_key">SearchLang</string>
    <string name="preferences_lang_title">Languages of the search engine</string>
    <string name="preferences_lang_summary">3 languages available. Searches can be performed simultaneously in several languages.</string>
    <string name="preferences_ornidroid_home_key">Home</string>
    <string name="preferences_ornidroid_home_title">Data Folder</string>
    <string name="preferences_ornidroid_home_summary">Choose the location where the application should put its data.</string>
    <string name="preferences_ornidroid_home_saved">Home directory change successful</string>
    <string name="help_change_ornidroid_home_title">Modify Home directory</string>
    <string name="help_change_ornidroid_home_content">Starting in Android 4.4, access to memory is strictly restricted to specific directories.\nDefault Internal : %1$s\nSD CARD (External) : %2$s\nIf you change Home, all the data from the previous installation directory will be moved in the new directory and the previous directory will be deleted. This operation can last up to 10 minutes.</string>
    <string name="preferences_automatic_update_check_key">AutomaticUpdateCheck</string>
    <string name="preferences_automatic_update_check_title">Automatic Update Check</string>
    <string name="preferences_automatic_update_check_summary">Performs automatically a check to let know if new pictures are available online.</string>

    <!-- labels for add custom media -->
    <string name="add_custom_media_error">The operation failed</string>
    <string name="add_custom_media_success">Your file has been successfully added</string>
    <string name="remove_custom_media_success">Your file has been successfully deleted</string>
    <string name="add_custom_media_go_back">Go back</string>

    <!-- pictures info dialog box -->
    <string name="dialog_picture_title">Picture info</string>
    <string name="dialog_picture_description">Description</string>
    <string name="dialog_picture_author">Author</string>
    <string name="dialog_picture_source">Source</string>
    <string name="dialog_picture_licence">Licence</string>

    <!-- alert dialogs from the home activity -->
    <string name="dialog_alert_ornidroid_home_not_found">The installation directory is deleted
		or corrupt! Please set it in the application preferences.</string>
    <string name="dialog_alert_ornidroid_database_not_found">Unable to find the database in the
		installation directory.</string>
    <string name="dialog_alert_connection_problem">Connection problem. Please check your access to the
		Internet.</string>

    <!-- autres labels -->
    <string name="zoom">Zoom image</string>
    <string name="home_stars">****</string>
    <string name="scientific_name">Scientific name</string>
    <string name="credits">Credits</string>
    <string name="no_pictures">No pictures. Do you want to check if records are
		available on the website ? (Internet connection is required)</string>
    <string name="no_wiki">Wikipedia page not found on your device. Do you want to download it (Internet connection is required)</string>
    <string name="about_ornidroid">Licence Creative Commons BY
		NC\nhttp://creativecommons.org/licenses/by-nc/3.0/deed.en</string>
    <string name="download_please_wait">Please wait during download. The screen will
		automatically refresh.</string>
    <string name="no_resources_online">Sorry, no files to download on the website.</string>
    <string name="unknown_error">Sorry, an unexpected error has occurred.</string>
    <!-- Help content -->
    <string name="help_text">Contact : ornidroid@free.fr\n\nHow-to download the full images and wikipedia packages : https://github.com/giletvin/flore/wiki/Installation-en\n\nTo change the search engine language : go to preferences (from the menu) and change OrnidroidSearchLang value</string>
    <!-- strings of the multi search -->

    <string name="search_scientific_family_choose">Choose a scientific family</string>
    <string name="search_scientific_family">Scientific family</string>
    <string name="search_inflorescence">Inflorescence type</string>
    <string name="search_inflorescence_choose">Choose an inflorescence</string>
    <string name="search_aspect_choose">Choose a shape of the corolla</string>
    <string name="search_aspect">Shape of the corolla</string>
    <string name="search_particularite_choose">Choose a particularity</string>
    <string name="search_particularite">Characteristic</string>
    <string name="search_leaf_type_choose">Choose leaves structure and shape</string>
    <string name="search_leaf_type">Leaves structure and shape</string>
    <string name="search_all">All </string>
    <string name="reset_form">Reset</string>
    <string name="search_nb_petale_choose">Choose a nb of petals, sepals or lobes</string>
    <string name="search_nb_petale">Nb of petals, sepals or lobes</string>
    <string name="search_pilosite_feuille_choose">Choose leaves hairiness</string>
    <string name="search_pilosite_feuille">Leaves hairiness</string>
    <string name="search_pilosite_tige_choose">Choose stem hairiness</string>
    <string name="search_pilosite_tige">Stem hairiness</string>
    <string name="search_colour_choose">Choose a colour</string>
    <string name="search_colour">Colour</string>
    <string name="search_results">results</string>
    <string name="search_leaf_disposition_choose">Choose leaves arrangement</string>
    <string name="search_leaf_disposition">Leaves arrangement</string>
    <string name="search_no_help">No help</string>
    <string name="wikipedia">Wikipedia </string>
    <string name="doc_url">Site abiris.snv.jussieu.fr: </string>
    <!-- labels for the updates -->
    <string name="updates_available">Updates available. Download ?</string>
    <string name="updates_check_error">Updates check went wrong. Please check your internet connectivity.</string>
    <string name="updates_none">No updates available.</string>
    <string name="download_subject_file">Download only for this flower</string>
    <string name="download_zip_package">Download complete package</string>
    <string name="download_package_in_progress">Download in progress</string>
    <string name="install_package_in_progress">Installation in progress</string>
    <string name="download_zip_package_warn_detail">Wifi connection is highly recommanded. Downloading and installing a package can last up to 5 to 10 min (depending on your internet connection)</string>
    <string name="download_zip_package_error">Download zip package went wrong.</string>
    <string name="download_zip_package_error_detail">Please check your Internet connection.</string>
    <string name="download_zip_not_enough_space">You don\'t have enough free space on your device to download and install the package.\nImages : 400 Mb\nWikipedia files : 15 Mb.</string>
    <string name="download_manual">You can also download the full package manually from a computer : https://github.com/giletvin/flore/wiki/Installation-en</string>
    <string name="release_notes">Release notes</string>

</resources>