<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/fr.arboretum"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="5sp" >

    <LinearLayout
        android:id="@+id/search_show_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/my_border"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/search_nb_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5sp"
            android:paddingLeft="5sp"
            android:paddingRight="30sp"
            android:paddingTop="5sp"
            android:text="@string/search_results" />

        <ImageView
            android:id="@+id/reset_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/reset_form"
            android:src="@drawable/ic_reset" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbar_search_multi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="4.0"
        android:paddingTop="30sp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

         
            <fr.arboretum.ui.multicriteriasearch.MultiCriteriaSelectField
                android:id="@+id/search_leaf_type_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20sp"
                android:paddingLeft="10sp"
                custom:spinnerPrompt="@string/search_leaf_type_choose"
                custom:text="@string/search_leaf_type" />

             <fr.arboretum.ui.multicriteriasearch.MultiCriteriaSelectField
                android:id="@+id/search_leaf_disposition_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20sp"
                android:paddingLeft="10sp"
                custom:spinnerPrompt="@string/search_leaf_disposition_choose"
                custom:text="@string/search_leaf_disposition" />
            <fr.arboretum.ui.multicriteriasearch.MultiCriteriaSelectField
                android:id="@+id/search_scientific_family_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20sp"
                android:paddingLeft="10sp"
                custom:spinnerPrompt="@string/search_scientific_family_choose"
                custom:text="@string/search_scientific_family" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>